# zutils

./: .gitmodules  README.md
cpp/: CMakeLists.txt  DevInfo.h  FilePathHelper.cpp  FilePathHelper.h  FileUtils.cc  FileUtils.h  FindOpenCL.cmake  ProcessHelper.cc  ProcessHelper.h  TextHelper.cpp  TextHelper.h  ThreadTaskHandler.cpp  ThreadTaskHandler.h  argparse.hpp  eventbus.h  getLocalIP_win.cpp  http.cc  http.h  wave-reader.cc  wave-writer.cc  zlog.cpp  zlog.h
cpp/test/: CMakeLists.txt  FileUtils_unittest.cc  testArgParse.cc  testEventbus.cc  testProcess.cc
opencl/: README.md
opencl/clHelper/: platform.h
opencl/oclutils-bin/linux_x64/: OclUtilsExample
opencl/test/: testOpencl.cc
python/: cpuid-exsample.py  cpuid.py  cvtMP4ToRawData_opencv.py
